Fixing NAV bar spacing

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -62,7 +62,7 @@ nav {
 
 .nav-links {
   display: flex;
-  gap:     2.5rem;
+  gap:     2.0rem;
 
   a {
     color:          var(--muted);
